# ENRG

./: .gitignore  .gitmodules  Anchor.toml  CHANGELOG.md  CLINE_INSTRUCTIONS.md  CONTRIBUTING.md  Cargo.toml  ENRG_Pitch_Deck_EN.html  ENRG_Technical_Documentation_EN.html  ENRG_Technical_Specification_v7.0.md  ENRG_Whitepaper_v1.2_EN.html  LICENSE  LOAD_TEST_REPORT.md  README.md  ROADMAP.md  SECURITY.md  create-producer-device.js  create-producer-fixed.js  create-producer.js  create_contract_v2.py  docker-compose.yml  enrg.db  first-mint.js  package-lock.json  package.json  server.js  task_progress.md  test-deploy.ts  test_proof.js  test_proof_full.js  tsconfig.json
programs/enrg-mvp/: Cargo.toml
programs/enrg-mvp/src/: constants.rs  error.rs  lib.rs  lib.rs.backup  lib.rs.backup_current  lib.rs.save  math.rs  pool.rs  specs.md
programs/enrg-mvp/src/adapters/: spl.rs
programs/enrg-mvp/src/instructions/: buyback.rs  device_lifecycle.rs  init_config.rs  initialize.rs  initialize_token.rs  manifest_registry.rs  manifest_verification.rs  merkle_proof_verification.rs  mint.rs  mod.rs  oracle_registry.rs  pool.rs  producer.rs  staking.rs  token.rs  vesting.rs
programs/enrg-mvp/src/security/: ed25519.rs  mod.rs  validation.rs
programs/enrg-mvp/src/state/: config.rs  events.rs  manifest_registry.rs  manifest_verification.rs  merkle_proof_verification.rs  mod.rs  oracle.rs  pool.rs  producer.rs  proof.rs  stake.rs  token_mint.rs  vault.rs  vesting.rs
programs/enrg-mvp/src/types/: mod.rs
programs/enrg-profile/: Cargo.toml
programs/enrg-profile/src/: lib.rs  state.rs
(+144 files in other folders)
