[package]
name = "enrg-mvp"
version = "0.1.0"
description = "ENRG Protocol MVP"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { version = "1.0.3", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.3", features = ["token"] }
solana-sdk-ids = "3.1.0"
solana-instructions-sysvar = "3.0.1"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
test = []
