[package]
name = "enrg-profile"
version = "0.1.0"
description = "ENRG Energy Profile — device metadata and sliding energy window"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { version = "=1.0.3", features = ["init-if-needed"] }

[features]
cpi = []
idl-build = ["anchor-lang/idl-build"]
test = []